// Copyright 2019 The MediaPipe Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package mediapipe;

import "mediapipe/framework/calculator.proto";
import "mediapipe/util/color.proto";

message RecolorCalculatorOptions {
  extend CalculatorOptions {
    optional RecolorCalculatorOptions ext = 252527117;
  }

  enum MaskChannel {
    UNKNOWN = 0;
    RED = 1;
    ALPHA = 2;
  }

  // Selects which channel of the MASK input to use for masking.
  optional MaskChannel mask_channel = 1 [default = RED];

  // Color to blend into input image where mask is > 0.
  // The blending is based on the input image luminosity.
  optional Color color = 2;
}
